--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Notify Packagist
         run: |
-          curl -s -X POST "https://packagist.org/api/update-package?username=pdfparse&apiToken=${{ secrets.PACKAGIST_API_TOKEN }}" \
+          curl -s -X POST "https://packagist.org/api/update-package?username=wbridgett&apiToken=${{ secrets.PACKAGIST_API_TOKEN }}" \
             -d '{"repository":{"url":"https://packagist.org/packages/pdfparse/flatpdf"}}'
