Add documentation site and LLM-friendly docs
- Create dedicated docs pages for all major features
- Add llms.txt and llms-full.txt for LLM consumption
- Update .gitattributes to exclude docs from dist archives
- Bump version to 0.1.5

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,10 @@
 # Files excluded from distribution archives (Packagist)
 /.github/               export-ignore
+/docs/                  export-ignore
 /tests/                 export-ignore
 /demo.php               export-ignore
+/llms.txt               export-ignore
+/llms-full.txt          export-ignore
 /phpunit.xml            export-ignore
 /phpstan.neon           export-ignore
 /CHANGELOG.md           export-ignore
